# intel-device-plugins-for-kubernetes

./: BUILD.bazel  Makefile  WORKSPACE
cmd/fpga_plugin/: fpga_plugin.go
cmd/fpga_tool/: fpga_tool.go
cmd/gpu_plugin/: BUILD.bazel  gpu_plugin.go
cmd/qat2_plugin/: qat2_plugin.go  qat2_plugin_test.go
cmd/qat_plugin/: qat_plugin.go
demo/: test-openssl-qat-engine.yaml
demo/crypto-perf/: Dockerfile
deployments/qat2_plugin/: qat2_plugin.yaml
internal/deviceplugin/: deviceplugin.go  deviceplugin_test.go
